Header: fix styles on mobile

--- a/src/views/header.scss
+++ b/src/views/header.scss
@@ -184,6 +184,9 @@ header {
         a.active {
           color: $grey;
         }
+        & > :last-child {
+          @include invertedCta();
+        }
       }
       &[open] + nav {
         transform: none;
